--- a/content/resources/mas-961s05.md
+++ b/content/resources/mas-961s05.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: Invisible Media by David Merrill and Pattie Maes of the MIT Media Lab.
   (Image by Prof. Patricia Maes.)
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/mas-961-ambient-intelligence-spring-2005/27822f98e8a12a5f3ebc46b598a049e0_mas-961s05.jpg
+file: /media/courses/mas-961-ambient-intelligence-spring-2005/27822f98e8a12a5f3ebc46b598a049e0_mas-961s05.jpg
 file_type: image/jpeg
 image_metadata:
   caption: _Invisible Media_ by David Merrill and Pattie Maes of the MIT Media Lab.
@@ -10,6 +10,8 @@ image_metadata:
   credit: ''
   image-alt: A man wearing a bluetooth earset is crouched next to an internal combustion
     engine.
+learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: mas-961s05.jpg
 uid: 27822f98-e8a1-2a5f-3ebc-46b598a049e0
