--- a/content/resources/mas-961s05.md
+++ b/content/resources/mas-961s05.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: Invisible Media by David Merrill and Pattie Maes of the MIT Media Lab.
   (Image by Prof. Patricia Maes.)
-file: /media/courses/mas-961-ambient-intelligence-spring-2005/27822f98e8a12a5f3ebc46b598a049e0_mas-961s05.jpg
+file: /courses/mas-961-ambient-intelligence-spring-2005/27822f98e8a12a5f3ebc46b598a049e0_mas-961s05.jpg
 file_type: image/jpeg
 image_metadata:
   caption: _Invisible Media_ by David Merrill and Pattie Maes of the MIT Media Lab.
@@ -16,3 +16,5 @@ resourcetype: Image
 title: mas-961s05.jpg
 uid: 27822f98-e8a1-2a5f-3ebc-46b598a049e0
 ---
+Invisible Media by David Merrill and Pattie Maes of the MIT Media Lab. (Image by Prof. Patricia Maes.)
+
