--- a/content/resources/mas-961s05.md
+++ b/content/resources/mas-961s05.md
@@ -11,10 +11,10 @@ image_metadata:
   image-alt: A man wearing a bluetooth earset is crouched next to an internal combustion
     engine.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: mas-961s05.jpg
 uid: 27822f98-e8a1-2a5f-3ebc-46b598a049e0
 ---
 Invisible Media by David Merrill and Pattie Maes of the MIT Media Lab. (Image by Prof. Patricia Maes.)
-
