--- a/content/resources/mas-961s05.md
+++ b/content/resources/mas-961s05.md
@@ -3,6 +3,7 @@ content_type: resource
 description: Invisible Media by David Merrill and Pattie Maes of the MIT Media Lab.
   (Image by Prof. Patricia Maes.)
 file: /courses/mas-961-ambient-intelligence-spring-2005/27822f98e8a12a5f3ebc46b598a049e0_mas-961s05.jpg
+file_size: 58044
 file_type: image/jpeg
 image_metadata:
   caption: _Invisible Media_ by David Merrill and Pattie Maes of the MIT Media Lab.
